--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<section>
+					   Haopeng
+					</section>
+					<section>
+					    Loves Open Source code
+					</section>
+				</section>
 				<section>Slide 2</section>
+				<section>Slide 3</section>
 			</div>
 		</div>
 
