--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
 				hash: true,
+				controls: true,
+                                progress: true,
+                                history: true,
+                                center: true,
+                                transition: 'cube', // none/fade/slide/convex/concave/zoom
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
