--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>NetApp Data Broker Deployment Guide</title>
+		<meta name="author" content="Liu Haopeng">
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -25,16 +26,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<section>
-					   Haopeng
-					</section>
-					<section>
-					    Loves Open Source code
-					</section>
+				<section data-markdown="markdown/NetAppDataBrokerDeployment.db"
+				    data-separator="^\n\n\n"
+						data-separator-vertical="^\n\n">
 				</section>
-				<section>Slide 2</section>
-				<section>Slide 3</section>
 			</div>
 		</div>
 
