--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				controls: true,
                                 progress: true,
                                 history: true,
-                                center: true,
-                                transition: 'cube', // none/fade/slide/convex/concave/zoom
+                                //center: true,
+                                //transition: 'cube', // none/fade/slide/convex/concave/zoom
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
