--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+
+				//custom scaling
+				width: "100%",
+				height: "100%",
+				margin: 0,
+				minScale: 1,
+				maxScale: 1
+
 				hash: true,
 				controls: true,
                                 progress: true,
