--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			Reveal.initialize({
 
 				//custom scaling
-				width: "100%",
+				//width: "100%",
 				height: "100%",
 				margin: 0,
 				minScale: 1,
