--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 			Reveal.initialize({
 
 				//custom scaling
-				//width: "100%",
+				width: "100%",
 				height: "100%",
 				margin: 0,
-				minScale: 1,
-				maxScale: 1
+				//minScale: 1,
+				//maxScale: 1,
 
 				hash: true,
 				controls: true,
